# bounty_system

./: Cargo.toml  README.md
migrations/2022-08-23-175401_create_contracts/: up.sql
migrations/2022-08-24-184425_create_members/: down.sql  up.sql
src/: args.rs  db.rs  main.rs  models.rs  ops.rs  schema.rs
src/ops/: contract_op.rs  member_ops.rs
