[package]
name = "bounty_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
diesel = { version = "1.4.8", features = ["mysql"] }
dotenv = "0.15.0"
